<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/actobservacion"
    tools:context=".ActivityObservaciones">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/fondo">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0">

            <TextView
                android:id="@+id/tvobservacion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="1dp"
                android:text="@string/id"
                android:textColor="#00000000" />

            <TextView
                android:id="@+id/tvdescrip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:text="@string/descripcion"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tvde"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:text="@string/agregar"
                android:textColor="@color/black"
                android:textSize="16sp" />


            <EditText
                android:id="@+id/txtobservacion"
                android:layout_width="wrap_content"
                android:layout_height="103dp"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:gravity="top|start"
                android:hint="@string/obs"
                android:inputType="textMultiLine"
                android:scrollbars="vertical"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <Button
                android:id="@+id/btnenviar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/enviar" />

            <Button
                android:id="@+id/btnreenviar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/reenviar"
                android:visibility="gone" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center" />

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navView"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        app:menu="@menu/nav_menu"
        app:headerLayout="@layout/naveg_header"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        />
</androidx.drawerlayout.widget.DrawerLayout>